# tode

./: .gitignore  Cargo.toml  README.md  build.rs
.circleci/: config.yaml  config.yml
.scripts/: codecov.sh
alpine/: Dockerfile
client/: Cargo.toml  build.rs
client/src/: main.rs
debian/: Dockerfile
k8s/: README.md
proto/: tode.proto
src/: client.rs  main.rs
tode-client/: Cargo.toml
