# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tode"
version = "0.1.0"
authors = ["alexlekrow <akac92@gmail.com>"]
edition = "2018"

[dependencies]
# async-stream = "0.2"
# futures-core = "0.3"
# futures-util = "0.3"
# futures = "0.3"
# rand = "0.7"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
# warp = "0.2"


[build-dependencies]
tonic-build = "0.3"