# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tode"
version = "0.1.0"
authors = ["alexlekrow <akac92@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "tode"
path = "src/main.rs"

# [[bin]] # Bin to run the HelloWorld gRPC client
# name = "tode-client"
# path = "src/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"