# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tode"
version = "0.1.0"
authors = ["alexlekrow <akac92@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "tode"
path = "src/main.rs"

# [[bin]] # Bin to run the HelloWorld gRPC client
# name = "tode-client"
# path = "src/client/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.3"